http://issues.apache.org/activemq/browse/AMQCPP-91

Fix SessionInfo memory leak

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk/activemq-cpp@519133 13f79535-47bb-0310-9956-ffa450edef68